# shared-models

./: .gitignore  DESIGN.md  LICENSE  README.md  __init__.py  example.py  main.py  pyproject.toml
data_model/: __init__.py  base.py  config.py  databag.py  frame.py  scene.py  types.py
